// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Skeleton should be render as a element 1`] = `
<div class="fect-skeleton">
  <div class="skeleton__content">
    <div class="fect-skeleton__item text animated" style="width: 100%;">
      <!---->
    </div>
    <div class="fect-skeleton__item text animated" style="width: 100%;">
      <!---->
    </div>
    <div class="fect-skeleton__item text animated" style="width: 100%;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`Skeleton should render anysome rows and setup width with rowsWidth 1`] = `
<div class="fect-skeleton">
  <div class="skeleton__content">
    <div class="fect-skeleton__item text animated" style="width: 10px;">
      <!---->
    </div>
    <div class="fect-skeleton__item text animated" style="width: 80px;">
      <!---->
    </div>
    <div class="fect-skeleton__item text animated" style="width: 70%;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`Skeleton should render anysome rows and setup width with rowsWidth 2`] = `
<div class="fect-skeleton">
  <div class="skeleton__content">
    <div class="fect-skeleton__item text animated" style="width: 50%;">
      <!---->
    </div>
    <div class="fect-skeleton__item text animated" style="width: 50%;">
      <!---->
    </div>
    <div class="fect-skeleton__item text animated" style="width: 50%;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`Skeleton should render different type skeletonItem 1`] = `
<div class="fect-skeleton">
  <div class="skeleton__content">
    <div class="fect-skeleton__item p animated">
      <!---->
    </div>
    <div class="fect-skeleton__item text animated">
      <!---->
    </div>
    <div class="fect-skeleton__item h1 animated">
      <!---->
    </div>
    <div class="fect-skeleton__item h3 animated">
      <!---->
    </div>
    <div class="fect-skeleton__item rect animated">
      <!---->
    </div>
    <div class="fect-skeleton__item circle animated">
      <!---->
    </div>
    <div class="fect-skeleton__item image animated"><svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" shape-rendering="geometricPrecision" viewBox="0 0 24 24" style="color: currentColor;">
        <rect width="18" height="18" x="3" y="3" rx="2" ry="2"></rect>
        <circle cx="8.5" cy="8.5" r="1.5"></circle>
        <path d="M21 15l-5-5L5 21"></path>
      </svg></div>
    <div class="fect-skeleton__item button animated">
      <!---->
    </div>
    <div class="fect-skeleton__item caption animated">
      <!---->
    </div>
  </div>
</div>
`;

exports[`Skeleton should support custom skeleton render 1`] = `
<div class="fect-skeleton">
  <div class="skeleton__content">
    <div class="fect-skeleton__item text animated">
      <!---->
    </div>
  </div>
</div>
`;

exports[`Skeleton should support custom skeleton render 2`] = `<p>already render</p>`;
